--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio",
+  "name": "Jon Urry Portfolio",
   "icons": [
     {
       "src": "img/favicons/android-icon-36x36.png",
@@ -37,5 +37,8 @@
       "type": "image/png",
       "density": "4.0"
     }
-  ]
+  ],
+  "start_url": "index.html",
+  "display": "standalone",
+  "orientation": "landscape"
 }
