Updated copy. Local server address. Tab spacing.

--- a/docs/.eslintrc.json
+++ b/docs/.eslintrc.json
@@ -1,1 +1,1 @@
-{"rules":{"linebreak-style":["error","unix"],"quotes":["error","single"],"indent":["error","space"],"semi":["error","always"]},"env":{"browser":true,"es6":true,"commonjs":true},"parserOptions":{"sourceType":"module"},"extends":"eslint:recommended"}
+{"rules":{"linebreak-style":["error","unix"],"quotes":["error","single"],"indent":["error",2],"semi":["error","always"]},"env":{"browser":true,"es6":true,"commonjs":true},"parserOptions":{"sourceType":"module"},"extends":"eslint:recommended"}
