--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "no-console": ["off"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
   }
