--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description":
-    "This is the portfolio website of Jon Urry - Web Application Developer and Designer.",
+  "description": "This is the portfolio website of Jon Urry - Web Application Developer and Designer.",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -18,9 +17,5 @@
     "url": "https://github.com/jonurry/portfolio/issues"
   },
   "homepage": "https://github.com/jonurry/portfolio#readme",
-  "dependencies": {
-    "express": "^4.16.3",
-    "request": "^2.85.0",
-    "request-promise": "^4.2.2"
-  }
+  "dependencies": {}
 }
